<resources>
    <string name="app_name">Github User</string>
    <string name="Uname">Username</string>
    <string name="Name">Name</string>
    <string name="profile">Profile</string>
    <string name="company">Company</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="search">search</string>
    <string name="insert_user">insert</string>
    <string name="user">user</string>
    <string name="menu_2">Settings</string>
    <string name="search_hint">input something</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="not_found">Please Try Another Input</string>
    <string name="greeting">Welcome To Github User, Please do some search</string>
    <string name="add_user">add user</string>
    <string name="del_user">remove user</string>
    <string name="menu_1">menu fav</string>
    <string name="fav_empty">Empty List, please like at least 1 user</string>
    <string name="favorite">My Favorite</string>
    <string name="detail">Detail</string>
    <string name="home">Home</string>
    <string name="reminder">Reminder at 9 AM</string>
    <string name="reminder_off">Notification Off</string>
    <string name="reminder_on">Notification On</string>
    <string name="language">Language</string>
    <string name="selected_language">English</string>
    <string name="notif">Let\'s find user on Github User!</string>
    <string name="image_splash">splash</string>

</resources>